<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:background="@drawable/widget_background"
    android:padding="12dp" android:orientation="vertical">
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/widget_preview_table_week" android:textSize="13sp" android:textColor="#707073" />
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp">
        <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginEnd="8dp" android:orientation="vertical">
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/widget_today_short" android:textSize="12sp" android:textColor="#707073" android:paddingBottom="8dp" />
            <include layout="@layout/widget_preview_modern_course" />
        </LinearLayout>
        <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginStart="8dp" android:orientation="vertical">
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/widget_tomorrow_short" android:textSize="12sp" android:textColor="#707073" android:paddingBottom="8dp" />
            <include layout="@layout/widget_preview_modern_course" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
