<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_header" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/widget_previous" android:layout_marginEnd="8dp" android:orientation="vertical">
        <TextView android:id="@+id/widget_date" android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginBottom="2dp" android:ellipsize="end" android:maxLines="1" android:textSize="13sp" android:textStyle="bold" />
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <TextView android:id="@+id/widget_table" android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:maxWidth="108dp" android:ellipsize="end" android:maxLines="1" android:textSize="11sp" android:textStyle="bold" />
            <TextView android:id="@+id/widget_week" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginStart="4dp"
                android:layout_weight="1" android:ellipsize="end" android:maxLines="1" android:textSize="11sp" android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
    <ImageView android:id="@+id/widget_next" android:layout_width="24dp" android:layout_height="24dp"
        android:layout_alignParentEnd="true" android:padding="4dp"
        android:contentDescription="@string/widget_next_day_description" android:src="@drawable/ic_widget_next" />
    <ImageView android:id="@+id/widget_settings" android:layout_width="24dp" android:layout_height="24dp"
        android:layout_toStartOf="@id/widget_next" android:layout_marginEnd="8dp" android:padding="4dp"
        android:contentDescription="@string/widget_settings_description" android:src="@drawable/ic_widget_settings" />
    <ImageView android:id="@+id/widget_previous" android:layout_width="24dp" android:layout_height="24dp"
        android:layout_toStartOf="@id/widget_settings" android:layout_marginEnd="8dp" android:padding="4dp"
        android:contentDescription="@string/widget_previous_day_description" android:src="@drawable/ic_widget_back" />
</RelativeLayout>
